# g3d

./: .editorconfig  .markdownlint.yml  .pre-commit-config.yaml  .yamllint  CMakeLists.txt  LICENSE.md  README.md
G3D.lib/: CMakeLists.txt
G3D.lib/include/G3D/: CPUPixelTransferBuffer.h  Color1unorm8.h  Color2unorm8.h  Color3unorm8.h  Color4unorm8.h  CompassDirection.h  CullFace.h  FastPODTable.h  HaltonSequence.h  Image.h  Image1unorm8.h  Image3unorm8.h  Image4unorm8.h  Noise.h  Parse3DS.h  ParseMTL.h  ParseOBJ.h  ParsePLY.h  PixelTransferBuffer.h  Projection.h  Proxy.h  SpeedLoad.h  Vector4int16.h  Vector4int32.h  network.h  platform.h  snorm16.h  snorm8.h  typeutils.h
G3D.lib/source/: BinaryInput.cpp  CPUPixelTransferBuffer.cpp  Color4unorm8.cpp  CompassDirection.cpp  Crypto.cpp  FileSystem.cpp  Frustum.cpp  HaltonSequence.cpp  Image.cpp  Image1unorm8.cpp  Image3unorm8.cpp  Image4unorm8.cpp  Matrix4.cpp  Parse3DS.cpp  ParseMTL.cpp  ParseOBJ.cpp  ParsePLY.cpp  PixelTransferBuffer.cpp  Projection.cpp  RegistryUtil.cpp  SpeedLoad.cpp  System.cpp  Vector4int16.cpp  Vector4int32.cpp  debugAssert.cpp  enumclass.cpp  fileutils.cpp  network.cpp  prompt.cpp
cmake/compilers/: AppleClang.cmake  Clang.cmake  GNU.cmake  MSVC.cmake  MinGW.cmake
cmake/macros/: CPM.cmake  CheckArchitecture.cmake  CheckPlatform.cmake  CustomMessages.cmake  CustomOptions.cmake  PreventInSourceBuilds.cmake  ProjectInfo.cmake  Tools.cmake  UninstallTargets.cmake
docs/patches/: README.md
